# lara-python

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  version
.github/workflows/: publish-to-pypi.yml
examples/: audio_translation.py  document_translation.py  glossaries_management.py  image_translation.py  language_detection.py  memories_management.py  text_translation.py
src/lara/: __init__.py
src/lara_sdk/: __init__.py  _client.py  _credentials.py  _errors.py  _s3client.py  _translator.py  credentials.py  models.py  sdk.py  translator.py
